[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/common/PullingArea.gd" type="Script" id=1]

[node name="PullingArea" type="Area"]
collision_layer = 0
collision_mask = 2147483650
script = ExtResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_PullingArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PullingArea_body_exited"]
